// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead injection should use render props to inject extra components 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="theme-items-container tc-typeahead-items-container theme-items-container"
    id="react-autowhatever-my-search"
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  >
    <div
      className="theme-items-body"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div>
        <div>
          Searching: 
        </div>
        <div>
          Loading: 
        </div>
        <div>
          No Result: 
        </div>
        <div>
          Is Shown: 
          category 1
          category 2
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            aria-selected={false}
            id="react-autowhatever-my-search--item-0"
            onMouseDown={[Function]}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="category 1"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    category 1
                  </span>
                </span>
              </div>
            </div>
          </li>
          <li
            aria-selected={false}
            id="react-autowhatever-my-search--item-1"
            onMouseDown={[Function]}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item"
              title="category 2"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    category 2
                  </span>
                </span>
              </div>
            </div>
          </li>
        </ul>
        <button>
          Click
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead items with match 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
      value="le"
    />
  </div>
  <div
    className="theme-items-container tc-typeahead-items-container theme-items-container"
    id="react-autowhatever-my-search"
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  >
    <div
      className="theme-items-body"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header theme-section-header tc-typeahead-section-header theme-tc-typeahead-section-header"
          >
            <Coral.Icon
              name="fa fa-filter"
              title="icon"
            />
            <span
              className="section-header-title theme-section-header-title tc-typeahead-section-header-title theme-tc-typeahead-section-header-title"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            aria-selected={true}
            className="theme-item-highlighted tc-typeahead-item-highlighted"
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={[Function]}
            role="option"
          >
            <div
              className="theme-item theme-multiline"
              title="le title 1"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                     tit
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                     1
                  </span>
                </span>
                <p
                  className="item-description theme-item-description tc-typeahead-item-description theme-tc-typeahead-item-description"
                >
                  <span>
                    description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibi
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                     tempus ardore.
                  </span>
                </p>
              </div>
            </div>
          </li>
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={[Function]}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item theme-multiline"
              title="title 2 les elephants elementaires ont des aile"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    tit
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                     2 
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                    s e
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                    phants e
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                    mentaires ont des ai
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                  </span>
                </span>
                <p
                  className="item-description theme-item-description tc-typeahead-item-description theme-tc-typeahead-item-description"
                >
                  <span>
                    description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header theme-section-header tc-typeahead-section-header theme-tc-typeahead-section-header"
          >
            <Coral.Icon
              name="fa fa-asterisk"
              title="icon"
            />
            <span
              className="section-header-title theme-section-header-title tc-typeahead-section-header-title theme-tc-typeahead-section-header-title"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={[Function]}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item theme-multiline"
              title="title 3"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    tit
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                     3
                  </span>
                </span>
                <p
                  className="item-description theme-item-description tc-typeahead-item-description theme-tc-typeahead-item-description"
                >
                  <span>
                    description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium va
                    <em
                      className="theme-highlight"
                    >
                      le
                    </em>
                    at.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with loading entry 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-loading"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="theme-items-container tc-typeahead-items-container theme-items-container theme-container-open"
    id="react-autowhatever-my-search"
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  >
    <div
      className="theme-items-body"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="theme-is-loading is-loading"
      >
        <span>
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with object items 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="theme-items-container tc-typeahead-items-container theme-items-container"
    id="react-autowhatever-my-search"
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  >
    <div
      className="theme-items-body"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header theme-section-header tc-typeahead-section-header theme-tc-typeahead-section-header"
          >
            <Coral.Icon
              name="fa fa-filter"
              title="icon"
            />
            <span
              className="section-header-title theme-section-header-title tc-typeahead-section-header-title theme-tc-typeahead-section-header-title"
            >
              category 1
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            aria-selected={true}
            className="theme-item-highlighted tc-typeahead-item-highlighted"
            id="react-autowhatever-my-search-section-0-item-0"
            onMouseDown={[Function]}
            role="option"
          >
            <div
              className="theme-item theme-multiline"
              title="le title 1"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    le title 1
                  </span>
                </span>
                <p
                  className="item-description theme-item-description tc-typeahead-item-description theme-tc-typeahead-item-description"
                >
                  <span>
                    description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibile tempus ardore.
                  </span>
                </p>
              </div>
            </div>
          </li>
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-0-item-1"
            onMouseDown={[Function]}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item theme-multiline"
              title="title 2 les elephants elementaires ont des aile"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    title 2 les elephants elementaires ont des aile
                  </span>
                </span>
                <p
                  className="item-description theme-item-description tc-typeahead-item-description theme-tc-typeahead-item-description"
                >
                  <span>
                    description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        className="theme-section-container tc-typeahead-section-container"
      >
        <div
          style={Object {}}
        >
          <div
            className="section-header theme-section-header tc-typeahead-section-header theme-tc-typeahead-section-header"
          >
            <Coral.Icon
              name="fa fa-asterisk"
              title="icon"
            />
            <span
              className="section-header-title theme-section-header-title tc-typeahead-section-header-title theme-tc-typeahead-section-header-title"
            >
              category 2
            </span>
          </div>
        </div>
        <ul
          className="theme-items"
          role="listbox"
        >
          <li
            aria-selected={false}
            id="react-autowhatever-my-search-section-1-item-0"
            onMouseDown={[Function]}
            role="option"
            style={Object {}}
          >
            <div
              className="theme-item theme-multiline"
              title="title 3"
            >
              <div
                className="theme-item-text"
              >
                <span
                  className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
                >
                  <span>
                    title 3
                  </span>
                </span>
                <p
                  className="item-description theme-item-description tc-typeahead-item-description theme-tc-typeahead-item-description"
                >
                  <span>
                    description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium valeat.
                  </span>
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with string items 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-container-open tc-typeahead-container-open"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="theme-items-container tc-typeahead-items-container theme-items-container"
    id="react-autowhatever-my-search"
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  >
    <div
      className="theme-items-body"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <ul
        className="theme-items"
        role="listbox"
      >
        <li
          aria-selected={false}
          id="react-autowhatever-my-search--item-0"
          onMouseDown={[Function]}
          role="option"
          style={Object {}}
        >
          <div
            className="theme-item"
            data-feature="data-feature-typeahead"
            title="category 1"
          >
            <div
              className="theme-item-text"
            >
              <span
                className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
              >
                <span>
                  category 1
                </span>
              </span>
            </div>
          </div>
        </li>
        <li
          aria-selected={false}
          id="react-autowhatever-my-search--item-1"
          onMouseDown={[Function]}
          role="option"
          style={Object {}}
        >
          <div
            className="theme-item"
            data-feature="data-feature-typeahead"
            title="category 2"
          >
            <div
              className="theme-item-text"
            >
              <span
                className="item-title theme-item-title tc-typeahead-item-title theme-tc-typeahead-item-title"
              >
                <span>
                  category 2
                </span>
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead without items 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="theme-items-container tc-typeahead-items-container theme-items-container theme-container-open"
    id="react-autowhatever-my-search"
    role="listbox"
    style={
      Object {
        "left": "0",
        "position": "fixed",
        "top": "0",
      }
    }
  >
    <div
      className="theme-items-body"
      style={
        Object {
          "maxHeight": undefined,
        }
      }
    >
      <div
        className="theme-no-result no-result"
      >
        <Coral.Icon
          name="talend-fieldglass"
          title="No result."
        />
        <span>
          No result.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Typeahead position should render search bar on the right 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-right"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      role="searchbox"
      type="text"
    />
  </div>
</div>
`;

exports[`Typeahead should pass input extra props 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-owns="react-autowhatever-my-search"
  className="theme-tc-typeahead-container tc-typeahead-container theme-right"
  role="combobox"
>
  <div
    className="tc-typeahead-typeahead-input-icon theme-typeahead-input-container"
  >
    <label
      className="control-label sr-only"
      htmlFor="react-autowhatever-my-search-input"
    >
      Search
    </label>
    <input
      aria-activedescendant="react-autowhatever-my-search-section-0-item-0"
      aria-autocomplete="list"
      aria-controls="react-autowhatever-my-search"
      aria-describedby="desc-id"
      aria-label="my custom label"
      autoComplete="off"
      autoFocus={false}
      className="theme-typeahead-input tc-typeahead-typeahead-input form-control"
      disabled={false}
      id="my-search"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      readOnly={false}
      role="searchbox"
      type="text"
    />
  </div>
</div>
`;

exports[`Typeahead with toggle should render button 1`] = `
<Coral.Tooltip
  placement="top"
  title="Toggle search bar"
>
  <Coral.Button
    aria-label="Toggle search bar"
    className="theme-only-icon-cls tc-typeahead-toggle btn-icon-only"
    disabled={false}
    hideText={true}
    icon="fa fa-search"
    onClick={[Function]}
    onMouseDown={[Function]}
  >
    Toggle search bar
  </Coral.Button>
</Coral.Tooltip>
`;
